apache2 support 1st stage

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ web/config.conf
 *.pyc
 worker/config.conf
 /web/Workspace/*
+/.idea/*
+worker/.idea/*
+worker/cpbqueue.wpr
+worker/cpbqueue.wpu
+worker/1
