--- a/worker/config.conf
+++ b/worker/config.conf
@@ -9,6 +9,7 @@ port =
 protocol_db = ui_protocol
 job_db = ui_queue
 train_db = ui_training
+reference_db = ui_references
 equation = ui_prediction
 resource = ui_resource
 
