rename to BioQueue

--- a/worker/config.conf
+++ b/worker/config.conf
@@ -27,7 +27,7 @@ memory =
 disk_quota = 
 
 [ml]
-api = http://www.cpbqueue.com/Open/Api
+api = http://www.bioqueue.org/Open/Api
 trainStore = 
 imgStore = 
 
