--- a/worker/config.conf
+++ b/worker/config.conf
@@ -18,8 +18,8 @@ resource = ui_resource
 [env]
 workspace = 
 log = 
-outputs =
-batch_job =
+outputs = 
+batch_job = 
 ftp_addr = 0.0.0.0
 ftp_port = 20001
 cpu = 
@@ -28,8 +28,10 @@ disk_quota =
 
 [ml]
 api = http://www.bioqueue.org/Open/Api
-trainStore = 
-imgStore = 
+trainstore = 
+imgstore = 
+confidence_weight = 1
+threshold = 0.5
 
 [cluster]
 type = 
