--- a/worker/config.conf
+++ b/worker/config.conf
@@ -37,3 +37,11 @@ threshold = 0.5
 type = 
 cpu = 
 queue = 
+
+[mail]
+notify = off
+sender = 
+mail_host = 
+mail_port = 
+mail_user = 
+mail_password = 
