--- a/worker/config.conf
+++ b/worker/config.conf
@@ -27,10 +27,12 @@ memory =
 disk_quota = 
 
 [ml]
-api = http://www.bioqueue.org/Open/Api
+api = http://open.bioqueue.org/Api
 trainstore = 
 imgstore = 
-confidence_weight = 1
+confidence_weight_disk = 1
+confidence_weight_mem = 1
+confidence_weight_cpu = 0.8
 threshold = 0.5
 
 [cluster]
