config.conf edited online with Bitbucket

--- a/worker/config.conf
+++ b/worker/config.conf
@@ -27,7 +27,7 @@ memory =
 disk_quota = 
 
 [ml]
-api = http://open.bioqueue.org/Api
+api = http://open.bioqueue.org/index.php/Api
 trainstore = 
 imgstore = 
 confidence_weight_disk = 1
