--- a/worker/config.conf
+++ b/worker/config.conf
@@ -14,6 +14,7 @@ equation = ui_prediction
 resource = ui_resource
 
 [program]
+latest_version = https://raw.githubusercontent.com/liyao001/BioQueue/master/version
 
 [env]
 workspace = 
