New git-ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,11 @@
 .project
 *.log
-/web/Application/Runtime/*
-web/Application/Common/Conf/config.php
 *.lock
-web/config.conf
 .pydevproject
 *.pyc
-/web/Workspace/*
+workspace/*
 /.idea/*
 worker/.idea/*
-worker/cpbqueue.wpr
-worker/cpbqueue.wpu
-worker/1
 BioQueue/settings.py
 deploy/000-default.conf
-worker/config.conf
-worker/config.conf
-worker/config.conf
-
 worker/config.conf
