--- a/worker/config.conf
+++ b/worker/config.conf
@@ -17,7 +17,7 @@ resource = ui_resource
 latest_version = https://raw.githubusercontent.com/liyao001/BioQueue/master/version
 
 [env]
-workspace = 
+workspace =
 log = 
 outputs = 
 batch_job = 
@@ -39,7 +39,9 @@ threshold = 0.5
 [cluster]
 type = 
 cpu = 
-queue = 
+queue =
+mem =
+vrt =
 walltime = 
 
 [mail]
