--- a/worker/config.conf
+++ b/worker/config.conf
@@ -28,7 +28,7 @@ memory =
 disk_quota = 
 
 [ml]
-api = http://bioqueue.nefu.edu.cn/index.php/Api
+api = http://open.bioqueue.org/index.php/Api
 trainstore = 
 imgstore = 
 confidence_weight_disk = 1
