--- a/config/bioqueue.conf
+++ b/config/bioqueue.conf
@@ -1,3 +1,3 @@
 [program]
 latest_version = https://raw.githubusercontent.com/liyao001/BioQueue/master/version
-api = http://open.bioqueue.org/index.php/Api
+api = http://bioqueue.nefu.edu.cn/index.php/Api
