--- a/config/bioqueue.conf
+++ b/config/bioqueue.conf
@@ -1,3 +1,5 @@
 [program]
 latest_version = https://raw.githubusercontent.com/liyao001/BioQueue/master/version
 api = http://bioqueue.nefu.edu.cn/index.php/Api
+tool_repo = https://raw.githubusercontent.com/BioQueue/tools/master/{query}
+tool_repo_search_api = https://api.github.com/search/code?q={query}+repo:BioQueue/tools
