--- a/config/bioqueue.conf
+++ b/config/bioqueue.conf
@@ -3,3 +3,5 @@ latest_version = https://raw.githubusercontent.com/liyao001/BioQueue/master/vers
 api = http://bioqueue.nefu.edu.cn/index.php/Api
 tool_repo = https://raw.githubusercontent.com/BioQueue/tools/master/{query}
 tool_repo_search_api = https://api.github.com/search/code?q={query}+repo:BioQueue/tools
+ref_repo = https://raw.githubusercontent.com/BioQueue/references/master/{query}
+ref_repo_search_api = https://api.github.com/search/code?q={query}+repo:BioQueue/references
