update the link to our open platform

--- a/config/bioqueue.conf
+++ b/config/bioqueue.conf
@@ -1,6 +1,6 @@
 [program]
 latest_version = https://raw.githubusercontent.com/liyao001/BioQueue/master/version
-api = http://bioqueue.nefu.edu.cn/index.php/Api
+api = http://open.bioqueue.org/index.php/Api
 tool_repo = https://raw.githubusercontent.com/BioQueue/tools/master/{query}
 tool_repo_search_api = https://api.github.com/search/code?q={query}+repo:BioQueue/tools
 ref_repo = https://raw.githubusercontent.com/BioQueue/references/master/{query}
